fixed mobile, textarea and button overlap.

--- a/client/src/screens/PostCreate/PostCreate.css
+++ b/client/src/screens/PostCreate/PostCreate.css
@@ -119,11 +119,21 @@
   width: 350px;
   margin: 20px;
   height: 50px;
+  
 }
 
 .create-textarea {
-  height: 100px;
+  height: 200px;
   line-height: 30px;
+}
+
+
+
+.create-post_form {
+  margin-bottom: 30px;
+}
+.create-form_div {
+  margin-bottom: 70px;
 }
 
 }
